exports[`containers EditTaskContainer should call saveTaskChanges and browserHistory.goBack 1`] = `
<EditTaskContainer
  categoryId={0}
  saveTaskChanges={[Function]}
  task={
    Object {
      "description": "Lol",
      "id": 0,
      "isDone": false,
      "title": "Task title",
    }
  }>
  <EditTask
    onCancel={[Function]}
    onSave={[Function]}>
    <div
      className="my-editTask-component">
      <div
        className="buttons-container">
        <button
          onClick={[Function]}>
          Save changes
        </button>
        <button
          onClick={[Function]}>
          Cancel
        </button>
      </div>
      <div>
        <input
          defaultValue="Task title"
          type="text" />
        <input
          defaultChecked={false}
          type="checkbox" />
      </div>
      <textarea
        className="description"
        cols="30"
        defaultValue="Lol"
        name="description"
        rows="30" />
    </div>
  </EditTask>
</EditTaskContainer>
`;

exports[`containers EditTaskContainer should render self and subcomponents 1`] = `
<EditTask
  onCancel={[Function]}
  onSave={[Function]}>
  <div>
    <input
      defaultValue="Task title"
      type="text" />
    <input
      defaultChecked={false}
      type="checkbox" />
  </div>
  <textarea
    className="description"
    cols="30"
    defaultValue="Lol"
    name="description"
    rows="30" />
</EditTask>
`;
